fix: alignment in homepage test: fix test by replacing myjson url with github gist

--- a/src/components/CertificateDropZone/CertificateDropzone.scss
+++ b/src/components/CertificateDropZone/CertificateDropzone.scss
@@ -4,3 +4,7 @@
   width: 100%;
   height: auto;
 }
+
+.padding-dropzone-boxshadow {
+  padding: $padding-dropzone-boxshadow;
+}
