--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -45,6 +45,7 @@ $btn-outline: $brand-navy;
 $round-btn-outline: $brand-navy;
 
 $max-width: 1280px;
+$padding-dropzone-boxshadow: 10px;
 
 $easeInCubic: cubic-bezier(0.55, 0.055, 0.675, 0.19);
 $easeOutCubic: cubic-bezier(0.215, 0.61, 0.355, 1);
